// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MovieGenresComponent /> should match snapshots should match snapshot - with genres 1`] = `
<Row
  gutter={0}
>
  <Col
    offset={2}
    span={20}
  >
    <Paragraph
      className="movie__text"
    >
      <b>
        some title
        : 
      </b>
      <Tag
        closable={false}
        key="1"
      >
        name_1
      </Tag>
      <Tag
        closable={false}
        key="2"
      >
        name_2
      </Tag>
    </Paragraph>
  </Col>
</Row>
`;

exports[`<MovieGenresComponent /> should match snapshots should match snapshot - without genres 1`] = `
<Row
  gutter={0}
>
  <Col
    offset={2}
    span={20}
  >
    <Paragraph
      className="movie__text"
    >
      <b>
        some title
        : 
      </b>
    </Paragraph>
  </Col>
</Row>
`;
